--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <section class="main-content d-flex align-items-center min-vh-100">
-    <div class="container shadow rounded-lg">
+    <div class="container shadow rounded">
       <div class="row row-1 rounded-top">
         <div class="col">
           <h1>Join our community <span class="emoji">🎉</span></h1>
