--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="row row-2 rounded-bottom">
         <div class="col-md-6 column-1 text-white">
           <h3><span>Monthly Subscription</span></h3>
-            <div class="price"><span class="h1">&dollar;29</span><span>per month</span></div>
+            <div class="price"><span class="price-number">&dollar;29</span><span>per month</span></div>
             <p>Full access for less than &dollar;1 a day</p>
             <button class="btn btn-lg btn-block text-white shadow-sm">Sign Up</button>
         </div>
